Revision history for Net-XMPP2

0.07
         - further todo items killed for MUC support
         - implemented mapping of old error codes to the new condition strings
           and the other way around too in Net::XMPP2::Error::Stanza
         - fallback namespace function for simxml() is now enabled all the time,
           now default namespaces are nearly always generated an the namespace of a
           node fallsback to the parent node if none was supplied.
         - increased test timeout to 20 secs and offered an environment variable
           to override it.
         - the XML writer doesn't write a encoding declaration anymore, for the sake
           of XMPP.

0.06 Wed Aug  1 15:53:56 CEST 2007
         - reply_iq_result and reply_iq_error now attach a from attribute themselves.
         - added general instructions for the test suite which also seems to be
           useful to test servers :-)
         - implemented XEP-0092
         - reviewed the message API a bit, take care
         - started implementation of MUC (XEP-0045).
         - added support for:
            - XEP-0082 - XMPP Date and Time Profiles
            - XEP-0091 - Delayed Delivery (legacy)
            - XEP-0203 - Delayed Delivery (new)
         - reworked subscription system a bit, now you have to subscribe
           manually by calling the contact's methods yourself.
         - fixed weirdties with JID prepping
         - removed to attribute from iq auth get
         - implemented iq auth (XEP-0078)
         - fixed some bugs and improved the API a bit
         - implemented the possibility of intercepting events from the library.

0.05 Fri Jul 27 17:45:16 CEST 2007
         - fixed destructor problem in disco
         - disco extension now supports multiple identities
         - added some unit tests!!!11
         - improved error reporting a bit of internal exceptions
         - fixed a bug where empty passwords didn't work