@@ -1,0 +1,5 @@
+*.swp
+Makefile
+Makefile.old
+blib
+pm_to_blib
