@@ -1,6 +1,8 @@
 Revision history for Net-XMPP2
 
 0.07
+         - Net::XMPP2::Client adding already existing accounts
+           now updates them.
          - further todo items killed for MUC support
          - implemented mapping of old error codes to the new condition strings
            and the other way around too in Net::XMPP2::Error::Stanza
